style: options spacing fix

--- a/src/app/Components/navbar/navbar.component.sass
+++ b/src/app/Components/navbar/navbar.component.sass
@@ -23,7 +23,7 @@ nav
 
   .options
     display: flex
-    gap: rem
+    gap: 1rem
     list-style: none
 
     .option
